{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 457,
  "lineage": "53835aea-a707-8ab4-bc03-a73ba50f2228",
  "resources": [
    {
      "module": "module.back-end-service",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/zones/us-central1-b/instanceGroups/instance-group-manhlnd1-uscentral-dev-lab01",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.7
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-11-13T19:26:36.454-08:00",
            "enable_cdn": false,
            "fingerprint": "p2CBQDsFwbw=",
            "generated_id": 8794976119116748291,
            "health_checks": [
              "projects/my-project-manhlnd1/global/healthChecks/health-check-manhlnd1-global-dev-lab01"
            ],
            "id": "projects/my-project-manhlnd1/global/backendServices/backend-service-manhlnd1-global-dev-lab01",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "locality_lb_policy": "ROUND_ROBIN",
            "name": "backend-service-manhlnd1-global-dev-lab01",
            "port_name": "loadbalancerhttp",
            "project": "my-project-manhlnd1",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/backendServices/backend-service-manhlnd1-global-dev-lab01",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.health-check.google_compute_health_check.autohealing",
            "module.instance-group.data.local_file.startup_script",
            "module.instance-group.google_compute_instance_group_manager.appserver",
            "module.instance-group.google_compute_region_instance_template.default",
            "module.instance-group.google_compute_resource_policy.daily_backup",
            "module.network.google_compute_firewall.healthcheck_firewall",
            "module.network.google_compute_firewall.internal_firewall",
            "module.network.google_compute_firewall.ssh_firewall",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.http-load-balancing",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "frontend_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/my-project-manhlnd1/global/forwardingRules/frontend-config-manhlnd1-global-dev-lab01",
            "ip_address": "34.36.25.102",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "frontend-config-manhlnd1-global-dev-lab01",
            "port_range": "80-80",
            "project": "my-project-manhlnd1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/forwardingRules/frontend-config-manhlnd1-global-dev-lab01",
            "target": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/targetHttpProxies/target-proxy-manhlnd1-uscentral-dev-lab01"
          },
          "dependencies": [
            "module.back-end-service.google_compute_backend_service.default",
            "module.health-check.google_compute_health_check.autohealing",
            "module.http-load-balancing.google_compute_target_http_proxy.default",
            "module.http-load-balancing.google_compute_url_map.default",
            "module.instance-group.data.local_file.startup_script",
            "module.instance-group.google_compute_instance_group_manager.appserver",
            "module.instance-group.google_compute_region_instance_template.default",
            "module.instance-group.google_compute_resource_policy.daily_backup",
            "module.network.google_compute_firewall.healthcheck_firewall",
            "module.network.google_compute_firewall.internal_firewall",
            "module.network.google_compute_firewall.ssh_firewall",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.http-load-balancing",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-13T19:27:12.419-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/my-project-manhlnd1/global/targetHttpProxies/target-proxy-manhlnd1-uscentral-dev-lab01",
            "name": "target-proxy-manhlnd1-uscentral-dev-lab01",
            "project": "my-project-manhlnd1",
            "proxy_bind": false,
            "proxy_id": 8967657315066927103,
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/targetHttpProxies/target-proxy-manhlnd1-uscentral-dev-lab01",
            "url_map": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/urlMaps/url-map-manhlnd1-uscentral-dev-lab01"
          },
          "dependencies": [
            "module.back-end-service.google_compute_backend_service.default",
            "module.health-check.google_compute_health_check.autohealing",
            "module.http-load-balancing.google_compute_url_map.default",
            "module.instance-group.data.local_file.startup_script",
            "module.instance-group.google_compute_instance_group_manager.appserver",
            "module.instance-group.google_compute_region_instance_template.default",
            "module.instance-group.google_compute_resource_policy.daily_backup",
            "module.network.google_compute_firewall.healthcheck_firewall",
            "module.network.google_compute_firewall.internal_firewall",
            "module.network.google_compute_firewall.ssh_firewall",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.http-load-balancing",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-13T19:27:00.026-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/backendServices/backend-service-manhlnd1-global-dev-lab01",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "SGqQAHBHKeY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/my-project-manhlnd1/global/urlMaps/url-map-manhlnd1-uscentral-dev-lab01",
            "map_id": 3945344900991506412,
            "name": "url-map-manhlnd1-uscentral-dev-lab01",
            "path_matcher": [],
            "project": "my-project-manhlnd1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/urlMaps/url-map-manhlnd1-uscentral-dev-lab01",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.back-end-service.google_compute_backend_service.default",
            "module.health-check.google_compute_health_check.autohealing",
            "module.instance-group.data.local_file.startup_script",
            "module.instance-group.google_compute_instance_group_manager.appserver",
            "module.instance-group.google_compute_region_instance_template.default",
            "module.instance-group.google_compute_resource_policy.daily_backup",
            "module.network.google_compute_firewall.healthcheck_firewall",
            "module.network.google_compute_firewall.internal_firewall",
            "module.network.google_compute_firewall.ssh_firewall",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "healthcheck_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-13T19:25:33.337-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-manhlnd1/global/firewalls/healthcheck-firewall-manhlnd1-uscentral-dev-lab01",
            "log_config": [],
            "name": "healthcheck-firewall-manhlnd1-uscentral-dev-lab01",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/networks/vpc-manhlnd1-uscentral-dev-lab01",
            "priority": 1000,
            "project": "my-project-manhlnd1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/firewalls/healthcheck-firewall-manhlnd1-uscentral-dev-lab01",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-13T19:25:47.247-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-manhlnd1/global/firewalls/firewall-manhlnd1-uscentral-dev-lab01",
            "log_config": [],
            "name": "firewall-manhlnd1-uscentral-dev-lab01",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/networks/vpc-manhlnd1-uscentral-dev-lab01",
            "priority": 1000,
            "project": "my-project-manhlnd1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/firewalls/firewall-manhlnd1-uscentral-dev-lab01",
            "source_ranges": [
              "10.2.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-13T19:25:33.228-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-manhlnd1/global/firewalls/ssh-firewall-manhlnd1-uscentral-dev-lab01",
            "log_config": [],
            "name": "ssh-firewall-manhlnd1-uscentral-dev-lab01",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/networks/vpc-manhlnd1-uscentral-dev-lab01",
            "priority": 1000,
            "project": "my-project-manhlnd1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/firewalls/ssh-firewall-manhlnd1-uscentral-dev-lab01",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/my-project-manhlnd1/global/networks/vpc-manhlnd1-uscentral-dev-lab01",
            "mtu": 0,
            "name": "vpc-manhlnd1-uscentral-dev-lab01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "my-project-manhlnd1",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/networks/vpc-manhlnd1-uscentral-dev-lab01"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-13T19:25:34.413-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/my-project-manhlnd1/regions/us-central1/subnetworks/subnetwork-manhlnd1-uscentral-dev-lab01",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "subnetwork-manhlnd1-uscentral-dev-lab01",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/global/networks/vpc-manhlnd1-uscentral-dev-lab01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-project-manhlnd1",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-manhlnd1/regions/us-central1/subnetworks/subnetwork-manhlnd1-uscentral-dev-lab01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}